# 260315-rag-funding-engine

./: .env.example  .gitignore  CLAUDE.md  DETERMINISTIC_QUERY_WALKTHROUGH.md  HANDOFF.md  IMPLEMENTATION_CHANGELOG_2026-03-14.md  README.md  pyproject.toml  requirements.txt  run.py
data/processed/: acc1520.sqlite3  acc1520_codes.json  ingest_manifest.json
data/processed/acc1520-medical/: acc1520-medical.sqlite3  acc1520-medical_codes.json  acc1520-medical_text_pages.json  manifest.json
docs/: ARCHITECTURE_V2.md  architecture.md  keyword-scoring-walkthrough.md
scripts/: debug_pipeline.py  eval_smoke.py  ingest_schedule.py  run_regression.py
src/rag_funding_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rag_funding_engine/api/: main.py
src/rag_funding_engine/db/: models.py
src/rag_funding_engine/pipeline/: constraints.py  ingest_acc1520.py  ingest_schedule.py  job_logger.py  recommend.py  semantic.py
src/rag_funding_engine/static/: index.html  jobs.html
src/rag_funding_engine/static/css/: jobs.css  style.css
src/rag_funding_engine/static/js/: app.js  jobs.js
tests/: regression_cases.json  test_gst_mode.py  test_ingest_schedule.py
